--- a/templates/repo_index.html
+++ b/templates/repo_index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="/static/style.css" />
 <title>
 {{ .project_name }}/repos/{{ .repo_name }}
 </title>
