repo_index: Add / to directories in name listings

--- a/templates/repo_index.html
+++ b/templates/repo_index.html
@@ -46,7 +46,7 @@
 {{- range .files }}
 <tr>
 <td class="file-mode">{{ .Mode }}</td>
-<td class="file-name"><a href="tree/{{ $ref }}/{{ .Name }}">{{ .Name }}</a></td>
+<td class="file-name"><a href="tree/{{ $ref }}/{{ .Name }}">{{ .Name }}</a>{{ if not .Is_file }}/{{ end }}</td>
 <td class="file-size">{{ .Size }}</td>
 </tr>
 {{- end }}
