--- a/templates/repo_tree_dir.html
+++ b/templates/repo_tree_dir.html
@@ -3,10 +3,13 @@
 <html>
 <head>
 <link rel="stylesheet" href="/static/style.css" />
-<title>{{ .project_name }}/repos/{{ .repo_name }}/{{ .path }}</title>
+<title>{{ .project_name }}/repos/{{ .repo_name }}/{{ .path_spec }}</title>
 </head>
 <body class="repo-index">
 <div class="padding-wrapper">
+<p>
+/{{ .path_spec }}/
+</p>
 <table id="file-tree">
 <thead>
 <tr>
