repo_tree: Add anchors to entries

--- a/templates/repo_tree_dir.html
+++ b/templates/repo_tree_dir.html
@@ -19,10 +19,12 @@
 </tr>
 </thead>
 <tbody>
+{{- $ref := .ref }}
+{{- $path_spec := .path_spec }}
 {{- range .files }}
 <tr>
 <td class="file-mode">{{ .Mode }}</td>
-<td class="file-name">{{ .Name }}</td>
+<td class="file-name"><a href="{{ $path_spec }}/{{ .Name }}">{{ .Name }}</a>{{ if not .Is_file }}/{{ end }}</td>
 <td class="file-size">{{ .Size }}</td>
 </tr>
 {{- end }}
