repo_tree_{dir,file}: Fix body class

--- a/templates/repo_tree_dir.html
+++ b/templates/repo_tree_dir.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="/static/style.css" />
 <title>{{ .project_name }}/repos/{{ .repo_name }}/{{ .path_spec }}</title>
 </head>
-<body class="repo-index">
+<body class="repo-tree-dir">
 <div class="padding-wrapper">
 <p>
 /{{ .path_spec }}/
