--- a/templates/repo_index.html
+++ b/templates/repo_index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="/static/style.css" />
-<title>{{ .project_name }}/repos/{{ .repo_name }}</title>
+<title>{{ .category_name }}/repos/{{ .repo_name }}</title>
 </head>
 <body class="repo-index">
 <div class="padding-wrapper">
