--- a/templates/repo_tree_dir.html
+++ b/templates/repo_tree_dir.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="/static/style.css" />
-<title>{{ .project_name }}/repos/{{ .repo_name }}/{{ .path_spec }}</title>
+<title>{{ .category_name }}/repos/{{ .repo_name }}/{{ .path_spec }}</title>
 </head>
 <body class="repo-tree-dir">
 <div class="padding-wrapper">
