--- a/templates/repo_tree_file.html
+++ b/templates/repo_tree_file.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="/static/style.css" />
+<link rel="stylesheet" href="/static/chroma.css" />
 <title>{{ .category_name }}/repos/{{ .repo_name }}/{{ .path_spec }}</title>
 </head>
 <body class="repo-tree-file">
