--- a/static/chroma.css
+++ b/static/chroma.css
@@ -1,6 +1,6 @@
 /* Background */ .bg { background-color: #ffffff; }
 /* PreWrapper */ .chroma { background-color: #ffffff; }
-/* Error */ .chroma .err { color: #000000 }
+/* Error */ .chroma .err { color: #ff0000; background-color: #ffaaaa }
 /* LineLink */ .chroma .lnlinks { outline: none; text-decoration: none; color: inherit }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
 /* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; }
@@ -8,63 +8,61 @@
 /* LineNumbersTable */ .chroma .lnt { white-space: pre; -webkit-user-select: none; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
 /* LineNumbers */ .chroma .ln { white-space: pre; -webkit-user-select: none; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
 /* Line */ .chroma .line { display: flex; }
-/* Keyword */ .chroma .k { color: #a90d91 }
-/* KeywordConstant */ .chroma .kc { color: #a90d91 }
-/* KeywordDeclaration */ .chroma .kd { color: #a90d91 }
-/* KeywordNamespace */ .chroma .kn { color: #a90d91 }
-/* KeywordPseudo */ .chroma .kp { color: #a90d91 }
-/* KeywordReserved */ .chroma .kr { color: #a90d91 }
-/* KeywordType */ .chroma .kt { color: #a90d91 }
-/* Name */ .chroma .n { color: #000000 }
-/* NameAttribute */ .chroma .na { color: #836c28 }
-/* NameBuiltin */ .chroma .nb { color: #a90d91 }
-/* NameBuiltinPseudo */ .chroma .bp { color: #5b269a }
-/* NameClass */ .chroma .nc { color: #3f6e75 }
-/* NameConstant */ .chroma .no { color: #000000 }
-/* NameDecorator */ .chroma .nd { color: #000000 }
-/* NameEntity */ .chroma .ni { color: #000000 }
-/* NameException */ .chroma .ne { color: #000000 }
-/* NameFunction */ .chroma .nf { color: #000000 }
-/* NameFunctionMagic */ .chroma .fm { color: #000000 }
-/* NameLabel */ .chroma .nl { color: #000000 }
-/* NameNamespace */ .chroma .nn { color: #000000 }
-/* NameOther */ .chroma .nx { color: #000000 }
-/* NameProperty */ .chroma .py { color: #000000 }
-/* NameTag */ .chroma .nt { color: #000000 }
-/* NameVariable */ .chroma .nv { color: #000000 }
-/* NameVariableClass */ .chroma .vc { color: #000000 }
-/* NameVariableGlobal */ .chroma .vg { color: #000000 }
-/* NameVariableInstance */ .chroma .vi { color: #000000 }
-/* NameVariableMagic */ .chroma .vm { color: #000000 }
-/* Literal */ .chroma .l { color: #1c01ce }
-/* LiteralDate */ .chroma .ld { color: #1c01ce }
-/* LiteralString */ .chroma .s { color: #c41a16 }
-/* LiteralStringAffix */ .chroma .sa { color: #c41a16 }
-/* LiteralStringBacktick */ .chroma .sb { color: #c41a16 }
-/* LiteralStringChar */ .chroma .sc { color: #2300ce }
-/* LiteralStringDelimiter */ .chroma .dl { color: #c41a16 }
-/* LiteralStringDoc */ .chroma .sd { color: #c41a16 }
-/* LiteralStringDouble */ .chroma .s2 { color: #c41a16 }
-/* LiteralStringEscape */ .chroma .se { color: #c41a16 }
-/* LiteralStringHeredoc */ .chroma .sh { color: #c41a16 }
-/* LiteralStringInterpol */ .chroma .si { color: #c41a16 }
-/* LiteralStringOther */ .chroma .sx { color: #c41a16 }
-/* LiteralStringRegex */ .chroma .sr { color: #c41a16 }
-/* LiteralStringSingle */ .chroma .s1 { color: #c41a16 }
-/* LiteralStringSymbol */ .chroma .ss { color: #c41a16 }
-/* LiteralNumber */ .chroma .m { color: #1c01ce }
-/* LiteralNumberBin */ .chroma .mb { color: #1c01ce }
-/* LiteralNumberFloat */ .chroma .mf { color: #1c01ce }
-/* LiteralNumberHex */ .chroma .mh { color: #1c01ce }
-/* LiteralNumberInteger */ .chroma .mi { color: #1c01ce }
-/* LiteralNumberIntegerLong */ .chroma .il { color: #1c01ce }
-/* LiteralNumberOct */ .chroma .mo { color: #1c01ce }
-/* Operator */ .chroma .o { color: #000000 }
-/* OperatorWord */ .chroma .ow { color: #000000 }
-/* Comment */ .chroma .c { color: #177500 }
-/* CommentHashbang */ .chroma .ch { color: #177500 }
-/* CommentMultiline */ .chroma .cm { color: #177500 }
-/* CommentSingle */ .chroma .c1 { color: #177500 }
-/* CommentSpecial */ .chroma .cs { color: #177500 }
-/* CommentPreproc */ .chroma .cp { color: #633820 }
-/* CommentPreprocFile */ .chroma .cpf { color: #633820 }
+/* Keyword */ .chroma .k { color: #0000aa }
+/* KeywordConstant */ .chroma .kc { color: #0000aa }
+/* KeywordDeclaration */ .chroma .kd { color: #0000aa }
+/* KeywordNamespace */ .chroma .kn { color: #0000aa }
+/* KeywordPseudo */ .chroma .kp { color: #0000aa }
+/* KeywordReserved */ .chroma .kr { color: #0000aa }
+/* KeywordType */ .chroma .kt { color: #00aaaa }
+/* NameAttribute */ .chroma .na { color: #1e90ff }
+/* NameBuiltin */ .chroma .nb { color: #00aaaa }
+/* NameClass */ .chroma .nc { color: #00aa00; text-decoration: underline }
+/* NameConstant */ .chroma .no { color: #aa0000 }
+/* NameDecorator */ .chroma .nd { color: #888888 }
+/* NameEntity */ .chroma .ni { color: #880000; font-weight: bold }
+/* NameFunction */ .chroma .nf { color: #00aa00 }
+/* NameNamespace */ .chroma .nn { color: #00aaaa; text-decoration: underline }
+/* NameTag */ .chroma .nt { color: #1e90ff; font-weight: bold }
+/* NameVariable */ .chroma .nv { color: #aa0000 }
+/* LiteralString */ .chroma .s { color: #aa5500 }
+/* LiteralStringAffix */ .chroma .sa { color: #aa5500 }
+/* LiteralStringBacktick */ .chroma .sb { color: #aa5500 }
+/* LiteralStringChar */ .chroma .sc { color: #aa5500 }
+/* LiteralStringDelimiter */ .chroma .dl { color: #aa5500 }
+/* LiteralStringDoc */ .chroma .sd { color: #aa5500 }
+/* LiteralStringDouble */ .chroma .s2 { color: #aa5500 }
+/* LiteralStringEscape */ .chroma .se { color: #aa5500 }
+/* LiteralStringHeredoc */ .chroma .sh { color: #aa5500 }
+/* LiteralStringInterpol */ .chroma .si { color: #aa5500 }
+/* LiteralStringOther */ .chroma .sx { color: #aa5500 }
+/* LiteralStringRegex */ .chroma .sr { color: #009999 }
+/* LiteralStringSingle */ .chroma .s1 { color: #aa5500 }
+/* LiteralStringSymbol */ .chroma .ss { color: #0000aa }
+/* LiteralNumber */ .chroma .m { color: #009999 }
+/* LiteralNumberBin */ .chroma .mb { color: #009999 }
+/* LiteralNumberFloat */ .chroma .mf { color: #009999 }
+/* LiteralNumberHex */ .chroma .mh { color: #009999 }
+/* LiteralNumberInteger */ .chroma .mi { color: #009999 }
+/* LiteralNumberIntegerLong */ .chroma .il { color: #009999 }
+/* LiteralNumberOct */ .chroma .mo { color: #009999 }
+/* OperatorWord */ .chroma .ow { color: #0000aa }
+/* Comment */ .chroma .c { color: #aaaaaa; font-style: italic }
+/* CommentHashbang */ .chroma .ch { color: #aaaaaa; font-style: italic }
+/* CommentMultiline */ .chroma .cm { color: #aaaaaa; font-style: italic }
+/* CommentSingle */ .chroma .c1 { color: #aaaaaa; font-style: italic }
+/* CommentSpecial */ .chroma .cs { color: #0000aa; font-style: italic }
+/* CommentPreproc */ .chroma .cp { color: #4c8317 }
+/* CommentPreprocFile */ .chroma .cpf { color: #4c8317 }
+/* GenericDeleted */ .chroma .gd { color: #aa0000 }
+/* GenericEmph */ .chroma .ge { font-style: italic }
+/* GenericError */ .chroma .gr { color: #aa0000 }
+/* GenericHeading */ .chroma .gh { color: #000080; font-weight: bold }
+/* GenericInserted */ .chroma .gi { color: #00aa00 }
+/* GenericOutput */ .chroma .go { color: #888888 }
+/* GenericPrompt */ .chroma .gp { color: #555555 }
+/* GenericStrong */ .chroma .gs { font-weight: bold }
+/* GenericSubheading */ .chroma .gu { color: #800080; font-weight: bold }
+/* GenericTraceback */ .chroma .gt { color: #aa0000 }
+/* GenericUnderline */ .chroma .gl { text-decoration: underline }
+/* TextWhitespace */ .chroma .w { color: #bbbbbb }
