head.html: Add a common head template
I tried to define a base.html and extend it from there, but Go's
templating system doesn't support that.

--- a/templates/category_index.html
+++ b/templates/category_index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="/static/style.css" />
+		{{ template "head_common" . }}
 		<title>{{ .category_name }}</title>
 	</head>
 	<body class="category-index">
