--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="/static/style.css" />
+		{{ template "head_common" . }}
 		<title>Forge</title>
 	</head>
 	<body class="index">
