*.html: Add "&ndash; Lindenii Forge" to the title

--- a/templates/category_index.html
+++ b/templates/category_index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		{{ template "head_common" . }}
-		<title>{{ .category_name }}</title>
+		<title>{{ .category_name }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="category-index">
 		<div class="padding-wrapper">
