--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		{{ template "head_common" . }}
-		<title>Forge</title>
+		<title>Categories &ndash; Lindenii Forge</title>
 	</head>
 	<body class="index">
 		<div class="padding-wrapper">
