--- a/templates/repo_tree_dir.html
+++ b/templates/repo_tree_dir.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		{{ template "head_common" . }}
-		<title>{{ .category_name }}/repos/{{ .repo_name }}/{{ .path_spec }}</title>
+		<title>{{ .category_name }}/repos/{{ .repo_name }}/{{ .path_spec }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="repo-tree-dir">
 		<div class="padding-wrapper">
