repo_{index,tree_dir}.html, style.css: Darker table title row

--- a/static/style.css
+++ b/static/style.css
@@ -37,5 +37,8 @@ td, th {
 	border: var(--border-color) solid 1px;
 }
 th {
+	background-color: var(--lighter-box-background-color);
+}
+tr.title-row > th {
 	background-color: var(--darker-box-background-color);
 }
