--- a/templates/repo_index.html
+++ b/templates/repo_index.html
@@ -9,7 +9,7 @@
 		<div class="padding-wrapper">
 			<table id="recent-commits">
 				<thead>
-					<tr>
+					<tr class="title-row">
 						<th colspan="4">Recent Commits</th>
 					</tr>
 					<tr>
@@ -38,7 +38,7 @@
 		<div class="padding-wrapper">
 			<table id="file-tree">
 				<thead>
-					<tr>
+					<tr class="title-row">
 						<th colspan="3">/ on {{ .ref }}</th>
 					</tr>
 					<tr>
@@ -67,7 +67,7 @@
 			{{ if .readme }}
 				<table id="readme">
 					<thead>
-						<tr>
+						<tr class="title-row">
 							<th>
 								README.md
 							</th>
