--- a/templates/repo_tree_dir.html
+++ b/templates/repo_tree_dir.html
@@ -9,7 +9,7 @@
 		<div class="padding-wrapper">
 			<table id="file-tree">
 				<thead>
-					<tr>
+					<tr class="title-row">
 						<th colspan="3">
 							/{{ .path_spec }}/ on {{ .ref }}
 						</th>
@@ -40,7 +40,7 @@
 			{{ if .readme }}
 				<table id="readme">
 					<thead>
-						<tr>
+						<tr class="title-row">
 							<th>
 								README.md
 							</th>
