--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 			<ul>
 				{{- range .categories }}
 					<li>
-						<a href="{{ . }}/">{{ . }}</a>
+						<a href="{{ . }}/repos/">{{ . }}</a>
 					</li>
 				{{- end }}
 			</ul>
