--- a/templates/repo_tree_dir.html
+++ b/templates/repo_tree_dir.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		{{ template "head_common" . }}
-		<title>{{ .category_name }}/repos/{{ .repo_name }}/{{ .path_spec }} &ndash; Lindenii Forge</title>
+		<title>{{ .category_name }}/repos/{{ .repo_name }}/{{ .path_spec }}{{ if ne .path_spec "" }}/{{ end }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="repo-tree-dir">
 		<div class="padding-wrapper">
@@ -11,7 +11,7 @@
 				<thead>
 					<tr class="title-row">
 						<th colspan="3">
-							/{{ .path_spec }}/ on {{ .ref }}
+							/{{ .path_spec }}{{ if ne .path_spec "" }}/{{ end }} on {{ .ref }}
 						</th>
 					</tr>
 					<tr>
@@ -25,7 +25,7 @@
 					{{- range .files }}
 						<tr>
 							<td class="file-mode">{{ .Mode }}</td>
-							<td class="file-name"><a href="{{ $path_spec }}/{{ .Name }}">{{ .Name }}</a>{{ if not .Is_file }}/{{ end }}</td>
+							<td class="file-name"><a href="{{ .Name }}{{ if not .Is_file }}/{{ end }}">{{ .Name }}</a>{{ if not .Is_file }}/{{ end }}</td>
 							<td class="file-size">{{ .Size }}</td>
 						</tr>
 					{{- end }}
