--- a/templates/repo_index.html
+++ b/templates/repo_index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		{{ template "head_common" . }}
-		<title>{{ .category_name }}/repos/{{ .repo_name }} &ndash; Lindenii Forge</title>
+		<title>{{ .group_name }}/repos/{{ .repo_name }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="repo-index">
 		<div class="padding-wrapper">
