--- a/templates/repo_tree_file.html
+++ b/templates/repo_tree_file.html
@@ -4,7 +4,7 @@
 	<head>
 		{{ template "head_common" . }}
 		<link rel="stylesheet" href="/static/chroma.css" />
-		<title>{{ .category_name }}/repos/{{ .repo_name }}/{{ .path_spec }} &ndash; Lindenii Forge</title>
+		<title>{{ .group_name }}/repos/{{ .repo_name }}/{{ .path_spec }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="repo-tree-file">
 		<p>
