--- a/templates/repo_tree_file.html
+++ b/templates/repo_tree_file.html
@@ -11,6 +11,9 @@
 			/{{ .path_spec }}
 		</p>
 		{{ .file_contents }}
+		<footer>
+			{{ template "footer" . }}
+		</footer>
 	</body>
 </html>
 {{- end -}}
