style.css, *.html: Lighthouse accessibility

--- a/templates/category_repos.html.tmpl
+++ b/templates/category_repos.html.tmpl
@@ -1,6 +1,6 @@
 {{- define "group_repos" -}}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		{{ template "head_common" . }}
 		<title>Repos in {{ .group_name }} &ndash; Lindenii Forge</title>
