--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -1,6 +1,6 @@
 {{- define "index" -}}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		{{ template "head_common" . }}
 		<title>Groups &ndash; Lindenii Forge</title>
