--- a/templates/repo_index.html.tmpl
+++ b/templates/repo_index.html.tmpl
@@ -1,6 +1,6 @@
 {{- define "repo_index" -}}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		{{ template "head_common" . }}
 		<title>{{ .group_name }}/repos/{{ .repo_name }} &ndash; Lindenii Forge</title>
