--- a/templates/repo_tree_dir.html.tmpl
+++ b/templates/repo_tree_dir.html.tmpl
@@ -1,6 +1,6 @@
 {{- define "repo_tree_dir" -}}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		{{ template "head_common" . }}
 		<title>{{ .group_name }}/repos/{{ .repo_name }}/{{ .path_spec }}{{ if ne .path_spec "" }}/{{ end }} &ndash; Lindenii Forge</title>
