--- a/templates/repo_tree_file.html.tmpl
+++ b/templates/repo_tree_file.html.tmpl
@@ -1,6 +1,6 @@
 {{- define "repo_tree_file" -}}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		{{ template "head_common" . }}
 		<link rel="stylesheet" href="/static/chroma.css" />
