--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@ footer {
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
-	padding: 0 1rem;
+	padding: 0 5px;
 	width: fit-content;
 	text-align: center;
 	color: var(--light-text-color);
@@ -27,7 +27,7 @@ footer a:link, footer a:visited {
 .padding-wrapper {
 	margin: 1rem auto;
 	max-width: 60rem;
-	padding: 0 1rem;
+	padding: 0 5px;
 }
 .padding-wrapper > * {
 	width: 100%;
