--- a/templates/repo_tree_file.html.tmpl
+++ b/templates/repo_tree_file.html.tmpl
@@ -8,7 +8,7 @@
 	</head>
 	<body class="repo-tree-file">
 		<p>
-			/{{ .path_spec }}
+			/{{ .path_spec }} (<a href="/g/{{ .group_name }}/repos/{{ .repo_name }}/raw/{{ .ref }}/{{ .path_spec }}">raw</a>)
 		</p>
 		{{ .file_contents }}
 		<footer>
