repo_index: Link to repo log

--- a/templates/repo_index.html.tmpl
+++ b/templates/repo_index.html.tmpl
@@ -10,7 +10,7 @@
 			<table id="recent-commits">
 				<thead>
 					<tr class="title-row">
-						<th colspan="4">Recent Commits</th>
+						<th colspan="4">Recent Commits (<a href="log/{{ .ref }}/">see all</a>)</th>
 					</tr>
 					<tr>
 						<th scope="col">ID</th>
