repo_{index,log}: Link commits to their pages

--- a/static/style.css
+++ b/static/style.css
@@ -79,3 +79,7 @@ th[scope=row] {
 tr.title-row > th {
 	background-color: var(--darker-box-background-color);
 }
+
+.commit-id {
+	font-family: monospace;
+}
