--- a/templates/repo_index.html.tmpl
+++ b/templates/repo_index.html.tmpl
@@ -21,7 +21,7 @@
 				<tbody>
 					{{- range .commits }}
 						<tr>
-							<td class="commit-title">{{ .Message | first_line }}</td>
+							<td class="commit-title"><a href="commit/{{ .ID }}">{{ .Message | first_line }}</a></td>
 							<td class="commit-author">
 								<a class="email-name" href="mailto:{{ .Author.Email }}">{{ .Author.Name }}</a>
 							</td>
