--- a/templates/repo_log.html.tmpl
+++ b/templates/repo_log.html.tmpl
@@ -21,7 +21,7 @@
 			<tbody>
 				{{- range .commits }}
 					<tr>
-						<td class="commit-id">{{ .Hash.String }}</td>
+						<td class="commit-id"><a href="../../commit/{{ .ID }}">{{ .ID }}</a></td>
 						<td class="commit-title">{{ .Message | first_line }}</td>
 						<td class="commit-author">
 							<a class="email-name" href="mailto:{{ .Author.Email }}">{{ .Author.Name }}</a>
