--- a/templates/repo_index.html.tmpl
+++ b/templates/repo_index.html.tmpl
@@ -63,7 +63,7 @@
 		</div>
 		<div class="padding-wrapper">
 			{{ if .readme }}
-				<table id="readme">
+				<table>
 					<thead>
 						<tr class="title-row">
 							<th>
@@ -73,7 +73,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>
+							<td id="readme">
 								{{ .readme -}}
 							</td>
 						</tr>
