--- a/templates/repo_tree_dir.html.tmpl
+++ b/templates/repo_tree_dir.html.tmpl
@@ -38,7 +38,7 @@
 		</div>
 		<div class="padding-wrapper">
 			{{ if .readme }}
-				<table id="readme">
+				<table>
 					<thead>
 						<tr class="title-row">
 							<th>
@@ -48,7 +48,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>
+							<td id="readme">
 								{{ .readme -}}
 							</td>
 						</tr>
