style.css, *.html: Scrolling behavior

--- a/templates/repo_commit.html.tmpl
+++ b/templates/repo_commit.html.tmpl
@@ -6,7 +6,7 @@
 		<title>{{ .group_name }}/repos/{{ .repo_name }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="repo-commit">
-		<div class="padding-wrapper">
+		<div class="padding-wrapper scroll">
 			<table id="commit-info-table">
 				<thead>
 					<tr class="title-row">
@@ -40,6 +40,8 @@
 					</tr>
 				</tbody>
 			</table>
+		</div>
+		<div class="padding-wrapper scroll">
 			<pre>{{ .patch }}</pre>
 			<p>
 			</p>
