--- a/templates/repo_log.html.tmpl
+++ b/templates/repo_log.html.tmpl
@@ -6,7 +6,7 @@
 		<title>Log of {{ .group_name }}/repos/{{ .repo_name }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="repo-index">
-		<table id="recent-commits">
+		<table id="commits" class="wide">
 			<thead>
 				<tr class="title-row">
 					<th colspan="4">Commits on {{ .ref }}</th>
