--- a/templates/repo_tree_dir.html.tmpl
+++ b/templates/repo_tree_dir.html.tmpl
@@ -6,8 +6,8 @@
 		<title>{{ .group_name }}/repos/{{ .repo_name }}/{{ .path_spec }}{{ if ne .path_spec "" }}/{{ end }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="repo-tree-dir">
-		<div class="padding-wrapper">
-			<table id="file-tree">
+		<div class="padding-wrapper scroll">
+			<table id="file-tree" class="wide">
 				<thead>
 					<tr class="title-row">
 						<th colspan="3">
@@ -38,7 +38,7 @@
 		</div>
 		<div class="padding-wrapper">
 			{{ if .readme }}
-				<table>
+				<table class="wide">
 					<thead>
 						<tr class="title-row">
 							<th>
