--- a/static/style.css
+++ b/static/style.css
@@ -46,12 +46,6 @@ footer a:link, footer a:visited {
 	max-width: 60rem;
 	padding: 0 5px;
 }
-.padding-wrapper > * {
-	width: 100%;
-}
-.padding-wrapper > table {
-	width: 100%;
-}
 a:link, a:visited {
 	text-decoration-color: var(--text-decoration-color);
 	color: var(--link-color);
@@ -65,6 +59,9 @@ table {
 	border: var(--lighter-border-color) solid 1px;
 	border-spacing: 0px;
 	border-collapse: collapse;
+}
+table.wide {
+	width: 100%;
 }
 td, th {
 	padding: 3px 5px;
@@ -90,4 +87,7 @@ td#readme > *:first-child {
 }
 .commit-id {
 	font-family: monospace;
+}
+pre, .scroll {
+	overflow-x: auto;
 }
