*.html: Fix body class

--- a/templates/group_repos.html.tmpl
+++ b/templates/group_repos.html.tmpl
@@ -5,7 +5,7 @@
 		{{ template "head_common" . }}
 		<title>Repos in {{ .group_name }} &ndash; Lindenii Forge</title>
 	</head>
-	<body class="group-index">
+	<body class="group-repos">
 		<div class="padding-wrapper">
 			<h1>
 			Repos in {{ .group_name }}
