--- a/templates/repo_log.html.tmpl
+++ b/templates/repo_log.html.tmpl
@@ -5,7 +5,7 @@
 		{{ template "head_common" . }}
 		<title>Log of {{ .group_name }}/repos/{{ .repo_name }} &ndash; Lindenii Forge</title>
 	</head>
-	<body class="repo-index">
+	<body class="repo-log">
 		<table id="commits" class="wide">
 			<thead>
 				<tr class="title-row">
