--- a/templates/repo_raw_dir.html.tmpl
+++ b/templates/repo_raw_dir.html.tmpl
@@ -5,7 +5,7 @@
 		{{ template "head_common" . }}
 		<title>{{ .group_name }}/repos/{{ .repo_name }}/{{ .path_spec }}{{ if ne .path_spec "" }}/{{ end }} &ndash; Lindenii Forge</title>
 	</head>
-	<body class="repo-tree-dir">
+	<body class="repo-raw-dir">
 		<div class="padding-wrapper scroll">
 			<table id="file-tree" class="wide">
 				<thead>
