--- a/templates/repo_index.html.tmpl
+++ b/templates/repo_index.html.tmpl
@@ -7,15 +7,11 @@
 	</head>
 	<body class="repo-index">
 		<div class="padding-wrapper scroll">
+			<input id="toggle-table-recent-commits" type="checkbox" class="toggle-table-off" />
 			<table id="recent-commits" class="wide">
 				<thead>
 					<tr class="title-row">
-						<th colspan="3">Recent Commits (<a href="log/{{ .ref }}/">see all</a>)</th>
-					</tr>
-					<tr>
-						<th scope="col">Title</th>
-						<th scope="col">Author</th>
-						<th scope="col">Time</th>
+						<th colspan="3"><label for="toggle-table-recent-commits">Recent Commits (<a href="log/{{ .ref }}/">see all</a>)</label></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -34,15 +30,11 @@
 			</table>
 		</div>
 		<div class="padding-wrapper scroll">
+			<input id="toggle-table-file-tree" type="checkbox" class="toggle-table-off" />
 			<table id="file-tree" class="wide">
 				<thead>
 					<tr class="title-row">
-						<th colspan="3">/ on {{ .ref }}</th>
-					</tr>
-					<tr>
-						<th scope="col">Mode</th>
-						<th scope="col">Name</th>
-						<th scope="col">Size</th>
+						<th colspan="3"><label for="toggle-table-file-tree">/ on {{ .ref }}</label></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -63,12 +55,11 @@
 		</div>
 		<div class="padding-wrapper">
 			{{ if .readme }}
+				<input id="toggle-table-readme" type="checkbox" class="toggle-table-off" />
 				<table class="wide">
 					<thead>
 						<tr class="title-row">
-							<th>
-								README.md
-							</th>
+							<th><label for="toggle-table-readme">README</label></th>
 						</tr>
 					</thead>
 					<tbody>
