repo_commit: Don't crash when viewing the first commit

--- a/templates/repo_commit.html.tmpl
+++ b/templates/repo_commit.html.tmpl
@@ -46,14 +46,14 @@
 			</table>
 		</div>
 		<div class="padding-wrapper">
-			{{ $parent_commit_object := .parent_commit_object }}
+			{{ $parent_commit_hash := .parent_commit_hash }}
 			{{ $commit_object := .commit_object }}
 			{{ range .file_patches }}
 				<div class="file-patch toggle-on-wrapper">
 					<input type="checkbox" id="toggle-{{ .From.Hash }}{{ .To.Hash }}" class="file-toggle toggle-on-toggle">
 					<label for="toggle-{{ .From.Hash }}{{ .To.Hash }}" class="file-header toggle-on-header">
 						<span>
-							--- a/<a href="../tree/{{ .From.Path }}?commit={{ $parent_commit_object.Hash }}">{{ .From.Path }}</a> {{ .From.Mode }}
+							--- a/<a href="../tree/{{ .From.Path }}?commit={{ $parent_commit_hash }}">{{ .From.Path }}</a> {{ .From.Mode }}
 							<br />
 							+++ b/<a href="../tree/{{ .To.Path }}?commit={{ $commit_object.Hash }}">{{ .To.Path }}</a> {{ .To.Mode }}
 						</span>
