_repo_header.html: Add link to root

--- a/templates/_repo_header.html.tmpl
+++ b/templates/_repo_header.html.tmpl
@@ -1,4 +1,6 @@
 {{- define "repo_header" -}}
+<a href="/">Lindenii Forge</a>
+/
 <a href="/g/{{ .group_name }}/">{{ .group_name }}</a>
 /
 <a href="/g/{{ .group_name }}/repos/">repos</a>
